# AIE6-Golf-Agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: .env.template  README.md  main.py
backend/agents/: golf_langgraph.py
backend/api/: __init__.py  agent.py  logging.py
backend/core/: logging_config.py  text_utils.py  vector_store.py
backend/prompts/: base_prompts.py
backend/tests/: __init__.py  conftest.py  test_course_insights_tool.py  test_get_pro_stats_tool.py  test_golf_langgraph.py  test_search_golfpedia_tool.py
backend/tools/: constants_tools.py  course_insights_tool.py  get_pro_stats_tool.py  golf_shot_recommendations_tool.py  registry.py  search_golfpedia_tool.py  utils.py
frontend/: .env.production  index.html  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatBox.jsx
frontend/src/utils/: env.js
notebooks/: 01_Embed_and_Store_Shots_GTE_with_Qdrant.ipynb  01_Embed_and_Store_Shots_MultiModel.ipynb  02_Retrieve_and_Test_Recommendations_GTE_with_Qdrant.ipynb  02_Retrieve_and_Test_Recommendations_MultiModel.ipynb  03_Evaluate_RAGAS_Performance.ipynb  04_Fine_Tune_Embedding_Model_Colab.ipynb  04_Fine_Tune_Embedding_Model_Colab.py
