[project]
name = "llm-agent-template"
version = "0.1.0"
description = "LLM Agent Template"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "python-multipart",  # for file uploads
    "uvicorn[standard]",
    "python-dotenv",
    "openai>=1.0.0",
    "pypdf",  # for PDF processing
    "PyPDF2>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",  # for data analysis
    "langchain>=0.1.0",
    "langchain-community>=0.0.22",
    "langchain-openai>=0.0.8", 
    "qdrant-client>=1.14.2",  # Vector storage
    "pytest>=7.0.0",  # Added pytest dependency
    "pytest-asyncio>=0.23.0",  # Added pytest-asyncio dependency    
    "pytest-cov>=4.1.0",  # Coverage reporting
    "tavily-python>=0.3.0",  # Added tavily dependency
    "langgraph>=0.0.15",  # Added langgraph dependency
    "sentence-transformers", #used for embeddings 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
] 

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=backend --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]
